--- a/views/hospital_department_views.xml
+++ b/views/hospital_department_views.xml
@@ -23,7 +23,7 @@
         <field name="model">hospital.department</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name"/>
+<!--                <field name="name"/>-->
                 <field name="number_of_doctor"/>
                 <field name="address"/>
                 <field name="gender"/>
@@ -37,7 +37,7 @@
             <field name="model">hospital.department</field>
             <field name="arch" type="xml">
                 <calendar string="Department Records">
-                    <field name="name" invisible="1"/>
+<!--                    <field name="name" invisible="1"/>-->
                     <field name="number_of_doctor"/>
                     <field name="address"/>
                     <field name="gender"/>
@@ -50,7 +50,7 @@
             <field name="model">hospital.department</field>
             <field name="arch" type="xml">
                 <pivot string="Patient Records" sample="1">
-                    <field name="name"/>
+<!--                    <field name="name"/>-->
                     <field name="number_of_doctor" type="measure"/>
                 </pivot>
             </field>
