--- a/views/sale_order_views.xml
+++ b/views/sale_order_views.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-        <record id="sale_view" model="ir.ui.view">
+        <record id="sale_order_form_inherit" model="ir.ui.view">
             <field name="name">sale.order.form.inherit</field>
             <field name="model">sale.order</field>
             <field name="inherit_id" ref="sale.view_order_form"/>
@@ -9,7 +9,15 @@
                 <field name="partner_id" position="after">
                     <field name="name_id"/>
                 </field>
+                <field name="payment_term_id" position="after">
+                    <field name="send_mail"/>
+                </field>
+                <xpath expr="/form/sheet/notebook/page/field[@name='order_line']/tree/field[@name='name']"
+                       position="after">
+                    <field name="total_one"/>
+                </xpath>
             </field>
         </record>
     </data>
 </odoo>
+
