--- a/wizard/sale_order_wizard_views.xml
+++ b/wizard/sale_order_wizard_views.xml
@@ -7,11 +7,9 @@
             <field name="arch" type="xml">
                 <form>
                     <group>
-                        <!--                        <field name="customer" readonly="1"/>-->
                         <field name="name" readonly="1"/>
-                        <field name="product" readonly="1"/>
-                        <field name="product_details_ids"
-                               domain="[('product_template_id', '=', product),('order_id.partner_id.name', '=', name)]">
+                        <field name="product_id" readonly="1"/>
+                        <field name="product_details_ids" readonly="1">
                             <tree>
                                 <field name="product_template_id"/>
                                 <field name="product_uom_qty"/>
@@ -20,24 +18,25 @@
                             </tree>
                         </field>
                     </group>
-<!--                    <footer>-->
-<!--                        <button string="History" name="action_show_history" type="object" class="oe_highlight"/>-->
-<!--                    </footer>-->
+                    <!--                    <footer>-->
+                    <!--                        <button string="History" name="action_show_history" type="object" class="oe_highlight"/>-->
+                    <!--                    </footer>-->
                 </form>
             </field>
         </record>
-        <!--        <record id="sale_order_line_wizard_view" model="ir.ui.view">-->
-        <!--            <field name="name">sale.order.line.view</field>-->
-        <!--            <field name="model">sale.order.line</field>-->
-        <!--            <field name="arch" type="xml">-->
-        <!--                <tree>-->
-        <!--                    <field name="product_template_id"/>-->
-        <!--                    <field name="product_uom_qty"/>-->
-        <!--                    <field name="price_unit"/>-->
-        <!--                    <field name="price_subtotal"/>-->
-        <!--                </tree>-->
-        <!--            </field>-->
-        <!--        </record>-->
+        <!--                <record id="sale_order_line_wizard_view" model="ir.ui.view">-->
+        <!--                    <field name="name">sale.order.line.view</field>-->
+        <!--                    <field name="model">sale.order.line</field>-->
+        <!--                    <field name="arch" type="xml">-->
+        <!--                        <tree>-->
+        <!--                            <field name="product_template_id"/>-->
+        <!--                            <field name="product_uom_qty"/>-->
+        <!--                            <field name="price_unit"/>-->
+        <!--                            <field name="price_subtotal"/>-->
+        <!--                        </tree>-->
+        <!--                    </field>-->
+        <!--                </record>-->
+
         <record id="action_sale_order_history_wizard" model="ir.actions.act_window">
             <field name="name">sale order history</field>
             <field name="type">ir.actions.act_window</field>
