--- a/views/sale_order_views.xml
+++ b/views/sale_order_views.xml
@@ -32,7 +32,21 @@
             </field>
         </record>
 
-
+<!--        <record id="sale_order_form_view_inherited" model="ir.ui.view">-->
+<!--            <field name="name">sale.order.form.inherited</field>-->
+<!--            <field name="model">sale.order</field>-->
+<!--            <field name="inherit_id" ref="sale.view_order_form"/>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <field name="order_line">-->
+<!--                    <tree editable="False">-->
+<!--                        <field name="product_template_id"/>-->
+<!--                        <field name="product_uom_qty"/>-->
+<!--                        <field name="price_unit"/>-->
+<!--                        <field name="price_subtotal"/>-->
+<!--                    </tree>-->
+<!--                </field>-->
+<!--            </field>-->
+<!--        </record>-->
     </data>
 </odoo>
 
